# designkeeper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  dk-templates.toml
.github/workflows/: auto-release.yml  release.yml
crates/dk/: Cargo.toml
crates/dk-core/: Cargo.toml
crates/dk-core/src/: check.rs  config.rs  discovery.rs  git.rs  init.rs  lib.rs  pack.rs  pack_store.rs  pipeline.rs  remote.rs  review.rs  slots.rs  validation.rs
crates/dk-core/tests/: fixtures.rs
crates/dk-core/tests/fixtures/examples/agent-response/: valid.md
crates/dk-core/tests/fixtures/examples/input/: minimal.json  with-pr-context.json
crates/dk-core/tests/fixtures/examples/output/: approve.json
crates/dk-core/tests/fixtures/examples/slots/: rendered-prompt-fragment.md
crates/dk/src/: doctor.rs  main.rs
docs/: CONTEXT.md  review-spec.md  vision.md
docs/adr/: 0001-delegate-pipeline-to-aikit-sdk.md
scripts/: run-tests.sh
skill/: SKILL.md  skill-project.toml  smoke.sh
skill/references/: agent-invocation.md  cli-builtins.md  cli-check.md  cli-doctor.md  cli-init.md  cli-mcp-serve.md  cli-review.md  configuration.md  sdk-dk-core.md  testing.md
skill/scripts/: smoke.sh
specs/: vision.md
specs/review/: README.md  spec.md
specs/review/examples/agent-response/: valid.md
specs/review/examples/output/: request-changes.json
specs/review/schemas/: output.schema.json
specs/review/templates/: methodology.md  prompt.md
templates/default/: aikit.toml
templates/default/reports/: review.md
templates/default/schemas/: input.schema.json
templates/default/templates/: methodology.md  prompt.md
templates/structural/: aikit.toml
templates/structural/reports/: review.md
templates/structural/schemas/: review-input.json  review.json
templates/structural/templates/: methodology.md  review.md
