[workspace]
resolver = "2"
members = ["crates/dk", "crates/dk-core"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aroff/designkeeper"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
jsonschema = "0.46"
ignore = "0.4"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aikit-sdk = { path = "../../goaikit/aikit/aikit-sdk" }
