[package]
name = "dk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DesignKeeper domain layer: review/check orchestration, config, discovery, pipeline."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
jsonschema.workspace = true
ignore.workspace = true
globset.workspace = true
tracing.workspace = true
thiserror.workspace = true
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
