[package]
name = "dk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DesignKeeper domain layer: review/check orchestration, config, discovery, pipeline."

[features]
testing = ["aikit-sdk/testing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
ignore.workspace = true
globset.workspace = true
tracing.workspace = true
thiserror.workspace = true
aikit-sdk.workspace = true

dirs.workspace = true
tempfile = "3"

[dev-dependencies]
serde_json.workspace = true
jsonschema.workspace = true
