[package]
name = "dk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DesignKeeper CLI — structured, agent-driven code review."

[[bin]]
name = "dk"
path = "src/main.rs"

[dependencies]
dk-core = { path = "../dk-core" }
aikit-sdk.workspace = true
openssl.workspace = true
cli-framework = { path = "../../../cli-framework", features = ["doctor", "mcp-server"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = "1"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
